# QubiconEngine

./: Cargo.toml
core/misc/qubicon_short_floats/: Cargo.toml
core/misc/qubicon_short_floats/src/: bfloat16.rs  fp16.rs  half16.rs  lib.rs
core/misc/qubicon_short_floats/src/fp16/: half16v.rs
core/qubicon_audio_server/: Cargo.toml
core/qubicon_input_server/: Cargo.toml
core/qubicon_input_server/examples/: gamepad_action.rs  listen_linux_keyboard.rs  test_action.rs
core/qubicon_input_server/src/: lib.rs
core/qubicon_input_server/src/linux/: device_manager.rs  device_state.rs  input_device.rs  input_event.rs  input_server.rs  mod.rs  tests.rs
core/qubicon_input_server/src/linux/keymaps/: Cargo.toml
core/qubicon_input_server/src/linux/keymaps/src/: abs.rs  btn.rs  consts.rs  ev.rs  key.rs  keyboard_key.rs  lib.rs  rel.rs
core/rendering/qubicon_vulkan/: Cargo.toml
core/rendering/qubicon_vulkan/_inner_macro/: Cargo.toml
core/rendering/qubicon_vulkan/_inner_macro/src/: lib.rs
core/rendering/qubicon_vulkan/examples/: allocate_buffer.rs  create_command_buffer.rs  create_descriptor_pool.rs  create_logical_device.rs  enumerate_devices.rs
core/rendering/qubicon_vulkan/examples/build_and_execute_pipeline/: main.rs  shader.comp  shader.spv
core/rendering/qubicon_vulkan/examples/create_shader_module/: main.rs  shader.spv
core/rendering/qubicon_vulkan/macro/: Cargo.toml
core/rendering/qubicon_vulkan/macro/src/: lib.rs
core/rendering/qubicon_vulkan/macro/src/generate_formats/: attributes.rs  mod.rs  type_resolver.rs
core/rendering/qubicon_vulkan/src/: error.rs  lib.rs  surface.rs
core/rendering/qubicon_vulkan/src/commands/: command_pool_inner.rs  mod.rs
core/rendering/qubicon_vulkan/src/commands/command_buffers/: command_buffer.rs  command_buffer_builder.rs  mod.rs
core/rendering/qubicon_vulkan/src/descriptors/: layout.rs  mod.rs
core/rendering/qubicon_vulkan/src/descriptors/alloc/: descriptor_pool_inner.rs  descriptor_set.rs  mod.rs
core/rendering/qubicon_vulkan/src/device/: create_info.rs  error.rs  inner.rs  mod.rs
core/rendering/qubicon_vulkan/src/instance/: create_info.rs  creation_info.rs  error.rs  inner.rs  mod.rs
core/rendering/qubicon_vulkan/src/instance/physical_device/: features.rs  format_properties.rs  memory_properties.rs  mod.rs  properties.rs  queue_info.rs
core/rendering/qubicon_vulkan/src/memory/: alloc.rs  memory_object.rs  mod.rs  resource_factory_tests.rs
core/rendering/qubicon_vulkan/src/memory/alloc/: device_memory.rs  error.rs  hollow_device_memory_allocator.rs  mod.rs  standart_device_memory_allocator.rs
core/rendering/qubicon_vulkan/src/queue/: inner.rs  mod.rs
core/rendering/qubicon_vulkan/src/queues/: mod.rs
core/rendering/qubicon_vulkan/src/resources/: buffer.rs  buffer_view.rs  format.rs  image.rs  image_view.rs  mapped_resource.rs  mod.rs  resource_factory.rs
core/rendering/qubicon_vulkan/src/shaders/: mod.rs  pipeline_layout.rs  shader_module.rs
core/rendering/qubicon_vulkan/src/swapchain/: inner.rs  memory_allocator.rs  mod.rs
core/rendering/qubicon_vulkan/src/sync/: event.rs  fence.rs  mod.rs  semaphore.rs
core/rendering/qubicon_windowing/: Cargo.toml
core/rendering/qubicon_windowing/examples/: demo_server.rs  demo_window.rs  window_with_swapchain.rs
core/rendering/qubicon_windowing/examples/vulkan_draw/: main.rs  shader.comp  shader_bin.spv
core/rendering/qubicon_windowing/src/: lib.rs
core/rendering/qubicon_windowing/src/x11/: mod.rs
(+41 files in other folders)
