[workspace]
resolver = "1"
members = [
    "core/qubicon_audio_server",
    "core/qubicon_input_server",

    "core/misc/qubicon_measuring_units",
    "core/misc/qubicon_short_floats",
    
    "core/rendering/qubicon_vulkan",
    "core/rendering/qubicon_windowing",
    "core/rendering/qubicon_rendering_server",
]
