[package]
name = "q_input_server"
version = "0.0.0"
edition = "2021"

[dependencies]
arrayvec = "0.7"

[target.'cfg(unix)'.dependencies]
nix = "0.27"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
keymaps = {path = "src/linux/keymaps"}
nix = { features = ["fs", "inotify"] }