[package]
name = "q_input_server"
version = "0.0.0"
edition = "2021"

[dependencies]
bitvec = "1.0"
arrayvec = "0.7"

[target.'cfg(unix)'.dependencies]
nix = "0.27"

[target.'cfg(target_os = "linux")'.dependencies]
keymaps = {path = "src/linux/keymaps"}
nix = { features = ["fs", "inotify", "ioctl"] }