[package]
name = "qubicon_short_floats"
version = "0.0.0"
edition = "2021"

[features]
default = ["std", "vectors"]

std = ["num-traits/std"]
vectors = ["dep:qubicon_simd"]

[dependencies.num-traits]
version = "0.2.17"
default-features = false

[dependencies.qubicon_simd]
optional = true
path = "../qubicon_simd"