[package]
name = "qubicon_vulkan"
description = "Vulkan 1.2 wrappers" # or 1.3, I dunno
version = "0.0.0"
edition = "2021"

[features]
default = ["validation", "x11"]

windowing = []
validation = []

# Features for creating VkSurface
x11 = ["windowing", "dep:x11"]

[dependencies.qubicon_vulkan_internal_macro]
path = "_inner_macro"

[dependencies]
ash = "0.37"
bitvec = "1.0"
bitflags = "2.4"
arrayvec = "0.7"
smallstr = "0.3"
smallvec = "1.11"
thiserror = "1.0"

x11 = { version = "2.21", optional = true }